--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Travelog
+title: Trag
 author: Your name
 author_link: https://whatever.you/like
 author_description: A few words to describe you & your face
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+Write an awesome description for your new site here. You can edit this
+line in _config.yml. It will appear in your document head meta (for
+    Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 
@@ -37,4 +37,4 @@ paginate: 5
 
 # Sass
 sass:
-    style: :compressed
+style: :compressed
